--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<!DOCTYPE html>
+<% provide(:title, "Help") %>
+<h1> Help </h1>
+<p>
+	Get help on your own! <a href=http://google.com> Click for google </a>
+</p>
+
