--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -186,3 +186,15 @@
 		width: auto;
 		margin-left: 0;
 	}
+	
+	/* Users index page */
+	
+	.users {
+		list-style: none;
+		margin: 0;
+		li { 
+				overflow: auto; 
+				padding: 10px 0;
+				border-bottom: 1px solid $gray-lighter;
+		}
+	}
