--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,13 @@
-UserMailer#password_reset
+Hi <%= @user.name %>
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+To reset your password, clcik the link below:
+
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+This link will expire in two hours.
+ 
+If you did not request your password to be reset, please ignore this email.If
+
+Best,
+
+Mwitter Support Team
